--- a/Gert.Site/Views/Professor/_Tarefas.cshtml
+++ b/Gert.Site/Views/Professor/_Tarefas.cshtml
@@ -38,7 +38,7 @@
     <div class="panel-heading">
         <h2>Tarefas</h2>
     </div>
-    @using (Ajax.BeginForm("ApagarDisciplinas", "Instituicao", new AjaxOptions()
+    @using (Ajax.BeginForm("ApagarTarefas", "Professor", new AjaxOptions()
     {
         UpdateTargetId = "areaComum",
         InsertionMode = InsertionMode.Replace,
