--- a/Gert.Site/Views/Shared/_MenuAluno.cshtml
+++ b/Gert.Site/Views/Shared/_MenuAluno.cshtml
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse">
             <div class="navbar-form navbar-right">
                 <a href="@Url.Action("Perfil", "Aluno")" class="btn btn-default"><i class="glyphicon glyphicon-user"></i> Olá @user.Pessoa.Nome</a>
-                <button class="btn btn-info" id="notificacao"><i class="glyphicon glyphicon-pencil"></i> Notify</button>
+                <a data-ajax="true" data-ajax-method="post" data-ajax-mode="replace" data-ajax-update="#areaComum" href="@Url.Action("Disciplinas", "Aluno")" class="btn btn-primary"><i class="glyphicon glyphicon-paperclip"></i> Disciplinas</a>                
                 <a href="@Url.Action("Trabalhos", "Aluno")" class="btn btn-info"><i class="glyphicon glyphicon-pencil"></i> Trabalhos</a>
                 <a href="@Url.Action("Deslogar", "Home")" class="btn btn-danger"><i class="glyphicon glyphicon-log-out"></i> Sair</a>
             </div>
