--- a/Gert.Site/Views/Aluno/_Perfil.cshtml
+++ b/Gert.Site/Views/Aluno/_Perfil.cshtml
@@ -1,19 +1,25 @@
-﻿@model Gert.Model.DataBase.Model.Professor
+﻿@model Gert.Model.DataBase.Model.Pessoa
 
-<div class="col-md-6">    
-    @using (Html.BeginForm("AlterarUsuario", "Professor", FormMethod.Post))
+<div class="col-md-6">
+    @using (Html.BeginForm("AlterarAluno", "Aluno", FormMethod.Post))
     {
+        @Html.HiddenFor(model => model.Id)
         <div class="dl-horizontal">
             <div class="input-group">
                 <span class="input-group-addon" id="sizing-addon2"><i class="glyphicon glyphicon-user"></i></span>
                 @Html.TextBoxFor(model => model.Nome, new Dictionary<string, object>() { { "class", "form-control" }, { "aria-describedby", "sizing-addon2" } })
             </div>
             @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
-            
+            <br />
+            <div class="input-group">
+                <span class="input-group-addon" id="sizing-addon2"><i class="glyphicon glyphicon-pushpin"></i></span>
+                @Html.TextBoxFor(model => model.Matricula, new Dictionary<string, object>() { { "class", "form-control" }, { "aria-describedby", "sizing-addon2" } })
+            </div>
+            @Html.ValidationMessageFor(model => model.Matricula, "", new { @class = "text-danger" })
+
             @Html.Partial("_AddUsuario", Model.Usuario)
         </div>
-
-        <br/>
+        <br />
         <button type="submit" class="btn btn-warning"><i class="glyphicon glyphicon-floppy-save"></i> Gravar Alteração</button>
     }
 </div>
