--- a/Gert.Site/Views/Shared/_AddUsuario.cshtml
+++ b/Gert.Site/Views/Shared/_AddUsuario.cshtml
@@ -6,10 +6,9 @@
 
 <br />
 <div class="input-group">
-    <span class="input-group-addon" id="sizing-addon2"><i class="glyphicon glyphicon-link"></i></span>
-    @Html.TextBoxFor(model => model.Login, new Dictionary<string, object>() { { "class", "form-control" }, { "aria-describedby", "sizing-addon2" } })    
+    <span class="input-group-addon" id="sizing-addon2"><i class="glyphicon glyphicon-link"></i></span>    
+    <input aria-describedby="sizing-addon2" class="form-control input-validation-error" data-val-required="Login é obrigatório" id="Login" name="Login" type="text" value="aluno">
 </div>
-@Html.ValidationMessageFor(model => model.Login, "", new { @class = "text-danger" })
 <br />
 <div class="input-group">
     <span class="input-group-addon" id="sizing-addon2"><i class="glyphicon glyphicon-share"></i></span>
