--- a/Gert.Site/Views/Shared/_MenuAluno.cshtml
+++ b/Gert.Site/Views/Shared/_MenuAluno.cshtml
@@ -30,6 +30,15 @@
                 <a data-ajax="true" data-ajax-method="post" data-ajax-mode="replace" data-ajax-update="#areaComum" href="@Url.Action("Perfil", "Aluno")" class="btn btn-default"><i class="glyphicon glyphicon-user"></i> Olá @user.Pessoa.Nome</a>
                 <a data-ajax="true" data-ajax-method="post" data-ajax-mode="replace" data-ajax-update="#areaComum" href="@Url.Action("Disciplinas", "Aluno")" class="btn btn-primary"><i class="glyphicon glyphicon-paperclip"></i> Disciplinas</a>
                 <a data-ajax="true" data-ajax-method="post" data-ajax-mode="replace" data-ajax-update="#areaComum" href="@Url.Action("Trabalhos", "Aluno")" class="btn btn-warning"><i class="glyphicon glyphicon-list-alt"></i> Trabalhos</a>
+                <div class="btn-group">
+                    <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                       <i class="glyphicon glyphicon-text-background"></i> Relatórios <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Discipinas</a></li>
+                        <li><a href="#">Tarefas</a></li>
+                    </ul>
+                </div>
                 <a href="@Url.Action("Deslogar", "Home")" class="btn btn-danger"><i class="glyphicon glyphicon-log-out"></i> Sair</a>
             </div>
         </div>
