Criação de Badge de Notificação.

--- a/Gert.Site/Views/Aluno/_Trabalhos.cshtml
+++ b/Gert.Site/Views/Aluno/_Trabalhos.cshtml
@@ -86,6 +86,8 @@
                             elemento.addClass("alert-danger");
                         }
                     }
+
+                    ConsultarQtdeTarefas();
                 }
             },
             error: (d) => {
