--- a/Gert.Site/Views/Shared/_MenuAluno.cshtml
+++ b/Gert.Site/Views/Shared/_MenuAluno.cshtml
@@ -11,6 +11,31 @@
             type: tipo
         }).show();
     }
+
+    function ConsultarQtdeTarefas() {
+        $.ajax({
+            url: "/Aluno/BuscarQtdeTarefa",
+            type: "POST",
+            traditional: true,
+            dataType: 'json',
+            success: function (data) {
+                $("#bdgTrabalhos").html(data.Message);
+            },
+            error: (d) => {
+                console.log(d);
+            }
+        });
+    }
+    
+    function IniciarNotificacaoTarefas() {
+        ConsultarQtdeTarefas();
+
+        setInterval(function () {
+            ConsultarQtdeTarefas();
+        }, 5000);
+    }
+
+    IniciarNotificacaoTarefas();
 </script>
 
 <div class="notifications bottom-right" id="alertaNotificacao"></div>
@@ -29,7 +54,7 @@
             <div class="navbar-form navbar-right">                
                 <a data-ajax="true" data-ajax-method="post" data-ajax-mode="replace" data-ajax-update="#areaComum" href="@Url.Action("Perfil", "Aluno")" class="btn btn-default"><i class="glyphicon glyphicon-user"></i> Olá @user.Pessoa.Nome</a>
                 <a data-ajax="true" data-ajax-method="post" data-ajax-mode="replace" data-ajax-update="#areaComum" href="@Url.Action("Disciplinas", "Aluno")" class="btn btn-primary"><i class="glyphicon glyphicon-paperclip"></i> Disciplinas</a>
-                <a data-ajax="true" data-ajax-method="post" data-ajax-mode="replace" data-ajax-update="#areaComum" href="@Url.Action("Trabalhos", "Aluno")" class="btn btn-warning"><i class="glyphicon glyphicon-list-alt"></i> Trabalhos</a>
+                <a data-ajax="true" data-ajax-method="post" data-ajax-mode="replace" data-ajax-update="#areaComum" href="@Url.Action("Trabalhos", "Aluno")" class="btn btn-warning"><i class="glyphicon glyphicon-list-alt"></i> Trabalhos <span class="badge" id="bdgTrabalhos"></span></a>
                 <div class="btn-group">
                     <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                        <i class="glyphicon glyphicon-text-background"></i> Relatórios <span class="caret"></span>
