Relatórios do Sistema

--- a/Gert.Site/Views/Professor/_Tarefas.cshtml
+++ b/Gert.Site/Views/Professor/_Tarefas.cshtml
@@ -82,7 +82,7 @@
                                 @Html.DisplayFor(modelItem => item.DtInicio)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.DtInicio)
+                                @Html.DisplayFor(modelItem => item.DtFinal)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Disciplina.Nome)
