--- a/Gert.Site/Views/Shared/_MenuAluno.cshtml
+++ b/Gert.Site/Views/Shared/_MenuAluno.cshtml
@@ -60,8 +60,8 @@
                        <i class="glyphicon glyphicon-text-background"></i> Relatórios <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Discipinas</a></li>
-                        <li><a href="#">Tarefas</a></li>
+                        <li><a href="@Url.Action("ListarDisciplinasAluno", "Aluno")">Discipinas</a></li>
+                        <li><a href="#" data-toggle="modal" data-target="#dlgListarTarefas">Tarefas</a></li>
                     </ul>
                 </div>
                 <a href="@Url.Action("Deslogar", "Home")" class="btn btn-danger"><i class="glyphicon glyphicon-log-out"></i> Sair</a>
