--- a/Gert.Site/Views/Home/Index.cshtml
+++ b/Gert.Site/Views/Home/Index.cshtml
@@ -24,8 +24,12 @@
                     <input class="form-control" type="text" id="Nome" name="Nome" placeholder="Nome"/>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="text" id="Matricula" name="Matricula" placeholder="Matricula" />
+                    <input class="form-control" type="text" id="Matricula" name="Matricula" placeholder="Matricula"/>
                 </div>
+                <div class="form-group">
+                    <input class="form-control" type="email" id="Email" name="Email" placeholder="E-mail"/>
+                </div>
+
                 @Html.Partial("_AddUsuario", new Usuario())
             </div>
             <div class="panel-footer text-right">
