--- a/Gert.Site/Views/Professor/_AddTarefa.cshtml
+++ b/Gert.Site/Views/Professor/_AddTarefa.cshtml
@@ -72,9 +72,18 @@
                         </div>
 
                         <div class="form-group">
-                            @Html.LabelFor(model => model.Arquivo, htmlAttributes: new { @class = "control-label col-md-2" })
+                            @Html.LabelFor(model => model.Arquivo, htmlAttributes: new {@class = "control-label col-md-2"})
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.Arquivo, new { htmlAttributes = new { @class = "form-control", @type = "file" } })
+                                @Html.EditorFor(model => model.Arquivo, new {htmlAttributes = new {@class = "form-control", @type = "file"}})
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            @Html.Label("Notificar Alunos", htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                <div class="checkbox">
+                                    @Html.CheckBox("EnviarEmail", false)
+                                </div>
                             </div>
                         </div>
                     </div>
